--- a/style.css
+++ b/style.css
@@ -25,10 +25,10 @@ h1, h2, h3 {
   transition: transform 0.3s ease-in-out; /* Smooth transition */
 }
 
-.big {
+.cardmy:hover {
   transform: scale(1.1);
   border-radius: 10px;
-  box-shadow: 0px 0px 16px 0px rgb(225 178 0 / 42%);
+  box-shadow: 0 0 15px -6px rgba(53, 37, 4, 0.42);
 }
 
 #about, #participants {
